# fms-guardrails-orchestrator

./: Cargo.toml
docs/api/: orchestrator_openapi_0_1_0.yaml
orchestrator-client/: Cargo.toml  build.rs
orchestrator-client/src/: client.rs  config.rs  health.rs  lib.rs  utils.rs
orchestrator-client/src/client/: error.rs  grpc.rs  http.rs
orchestrator-client/src/pb/: grpc.health.v1.rs  mod.rs
orchestrator-client/src/utils/: tls.rs  trace.rs
src/: args.rs  clients.rs  config.rs  lib.rs  main.rs  models.rs  orchestrator.rs  server.rs  tracing_utils.rs
src/clients/: chunker.rs  detector.rs  errors.rs  generation.rs  grpc.rs  http.rs  nlp.rs  openai.rs  tgis.rs
src/clients/detector/: text_chat.rs  text_contents.rs  text_context_doc.rs  text_generation.rs
src/orchestrator/: errors.rs  streaming.rs  unary.rs
src/tracing_utils/: trace_layer.rs
src/utils/: tls.rs
tests/: canary_test.rs
