[package]
name = "fms-guardrails-orchestr8"
version = "0.1.0"
edition = "2021"
authors = ["Evaline Ju", "Gaurav Kumbhat", "Dan Clark"]
description = "Foundation models orchestration server"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fms-guardrails-orchestr8"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["json"] }
axum-extra = "0.9.3"
clap = { version = "4.5.15", features = ["derive", "env"] }
futures = "0.3.30"
ginepro = "0.8.1"
hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.7", features = ["server-auto", "server-graceful", "tokio"] }
mio = "1.0.2"
prost = "0.13.1"
reqwest = { version = "0.12.5", features = ["blocking", "rustls-tls", "json"] }
rustls = {version = "0.23.12", default-features = false, features = ["std"]}
rustls-pemfile = "2.1.3"
rustls-webpki = "0.102.6"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_yml = "0.0.11"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "parking_lot", "signal", "sync", "fs"] }
tokio-rustls = { version = "0.26.0" }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tonic = { version = "0.12.1", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tower-service = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
async-trait = "0.1.81"
async-stream = "0.3.5"
opentelemetry = "0.24.0"
opentelemetry-jaeger = "0.22.0"
opentelemetry-otlp = "0.17.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25.0"
opentelemetry-http = "0.13.0"

[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
axum-test = "15.7.1"
faux = "0.1.10"

[profile.release]
debug = false
incremental = true
lto = true
strip = "symbols"
